--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,64 @@
 baseURL = "https://samthehai.github.io"
 languageCode = "en-us"
 title = "Hai Sam's Blog"
-theme = "ananke"
+theme = "hugo-ink"
+paginate = 5
+
+copyright = "© Copyright notice"
+
+pygmentsstyle = "vs"
+pygmentscodefences = true
+pygmentscodefencesguesssyntax = true
+
+googleAnalytics = "UA-123-45"
+disqusShortname = "Hai Sam's Blog"
+
+[params]
+	subtitle = "Hai Sam, a programming enthusiasm father"
+
+	# Optional 64x64 avatar image.
+	avatar = "https://avatars.githubusercontent.com/u/28634475?s=460&u=f4564e31e24dbd90802eaf4a18d2d9e578c77108&v=4"
+
+	# Content types to disable Disqus on.
+	disableDisqusTypes = ["page"]
+
+	featherIconsCDN = true
+
+	mode = "auto" # "dark" or "auto"
+	# customCSS = "css/custom.css"  # Custom CSS applied to default styles.
+	# customDarkCSS = "css/custom-dark.css"  # Custom styles applied to dark mode css.
+	# customJS = ["js/custom.js", "js/custom1.js"]  # Custom JS scripts.
+
+# Nav.
+[[menu.main]]
+name = "Home"
+url = "/"
+weight = 1
+
+[[menu.main]]
+name = "All posts"
+url = "/posts"
+weight = 2
+
+[[menu.main]]
+name = "About"
+url = "/about"
+weight = 3
+
+[[menu.main]]
+name = "Tags"
+url = "/tags"
+weight = 4
+
+[[params.social]]
+name = "Github"
+icon = "github"
+url = "https://github.com/samthehai"
+
+[[params.social]]
+name = "RSS"
+icon = "rss"
+url = "/index.xml"
+
+[taxonomies]
+   tag = "tags"
